@@ -3,6 +3,7 @@ Changes after KPresenter 1.3
 - Fixed possible crash in presentation mode if not all slides are shown
 - fixed wrong clipping of fullscreen presentation (#73943)
 - Fixed show the duration for the correct page if not all slides are shown
+- Fixed crash in infinite loop presentation mode when first slide is not shown
 
 Changes:
 - If a page is shown more than once during a presentation add the time for
